--- a/AI_Agents/LangChain/ReActPatterns/package.json
+++ b/AI_Agents/LangChain/ReActPatterns/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@langchain/core": "^1.1.8",
     "@langchain/google-genai": "^2.1.3",
+    "@langchain/groq": "^1.0.2",
     "dotenv": "^17.2.3",
     "langchain": "^1.2.3",
     "zod": "^4.2.1"
